2002-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* tape-src/tapetype.c: Cast time_t to long for printing.

2002-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c: Write a "amflush: start at ???" line.
	* server-src/amstatus.pl.in: parse the "amflush: start at ???" line.

2002-11-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (delay_dumps): Use ap_snprintf.

2002-11-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/debug.c: Most of the code must in #ifdef DEBUG_CODE.
	* client-src/client_util.c: Use AMANDA_TMPDIR instead of AMANDA_DBGDIR.

2002-11-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/TAPE.CHANGERS: Sync with 2.5.0
	* changer-src/chg-juke.sh.in: New changer from 2.5.0
	* changer-src/chg-rait.sh.in: New changer from 2.5.0
	* changer-src/chg-null.sh.in: New changer from 2.5.0
	* changer-src/Makefile.am: Install them.
	* configure.in (AC_CONFIG_FILES): Add chg-juke.sh.in, chg-rait.sh.in and
	  chg-null.sh.in

2002-11-24  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c: Cleanup.

2002-11-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* man/amadmin.8.in: Document new --days option of balance subcommand.

2002-11-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c (days_diff): Make next_level0 more acurate.
	* server-src/amadmin.c (balance): Improve output.

2002-11-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c: Add Retry and Skip command to amrecover.

2002-11-23  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* tape-src/output-tape.c (tape_tapefd_fsf): Must not be static.

2002-11-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/reporter.c: Fix for LPRCMD not defined.

2002-11-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Orion Poplawski <orion@colorado-research.com>
