@@ -1,3 +1,9 @@
+2002-11-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* common-src/amanda.h (days_diff): Don't add a half day.
+	* server-src/amadmin.c: Fix for newer days_diff.
+	* server-src/planner.c: Fix for newer days_diff.
+
 2002-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
 	* tape-src/tapetype.c: Cast time_t to long for printing.
